--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,35 @@
 ---
 name: Test-Perl-Critic-Progressive
-version: 0.02
+version: 0.03
 author:
   - 'Jeffrey Thalhammer <thaljef@cpan.org>'
-abstract: Use Perl::Critic in test scripts
+abstract: Encourage Perl::Critic conformance over time.
 license: perl
 resources:
+  MailingList: http://perlcritic.tigris.org/servlets/SummarizeList?listName=users
+  Repository: http://perlcritic.tigris.org/svn/perlcritic/trunk/Test-Perl-Critic-Progressive/
+  homepage: http://perlcritic.com
   license: http://dev.perl.org/licenses/
 requires:
-  Perl::Critic: 0.21
-  Perl::Critic::Utils: 0.21
+  Carp: 0
+  Data::Dumper: 0
+  English: 0
+  Exporter: 0
+  File::Spec: 0
+  FindBin: 0
+  Perl::Critic: 1.082
+  Perl::Critic::Utils: 1.082
   Test::Builder: 0
+  base: 0
+  strict: 0
+  warnings: 0
 build_requires:
   Test::More: 0
+dynamic_config: 1
 provides:
   Test::Perl::Critic::Progressive:
     file: lib/Test/Perl/Critic/Progressive.pm
-    version: 0.02
+    version: 0.03
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
